src/ui/static/app.css
body {
  padding: 10px;
  font-size: 17px;
}

.md-toolbar-tools {
  text-align: center;
}

.md-button.square {
  height: 3em;
  width: 3em;
  min-height: 3em;
  min-width: 3em;
  margin: 0px 4px;
}

.md-button[disabled] {
  background-color: rgba(0,0,0,0.12) !important
}

md-card {
  margin-left: 0;
  margin-right: 0;
  padding-top: 0.3em;
}

md-card md-card-title {
  padding: 1em;
}

.md-title {
  font-size: 1.2em;
  font-weight: normal;
}

.indicator {
  text-transform: uppercase;
  line-height: 1.5em;
  font-size: 0.7em;
  display: inline-block;
  padding: 3px 5px;
  margin-left: 4px;
  border-radius: 5px;
  position: relative;
  top: -2px;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.25);
  z-index: 2;
  display: flex;
  align-items: center;
}

.overlay > md-progress-circular {
  margin: auto;
}

.md-subhead .material-icons {
  font-size: 22px;
}

.app {
  max-width: 500px;
  width: 100%;
  margin: auto;
}

